--- a/Ejemplo.Rnw
+++ b/Ejemplo.Rnw
@@ -32,4 +32,17 @@ $$E(Y_i)=\beta_i+\beta_2 x_{2i}+...+\beta_p x_{pi}$$
   \item Una variable binaria, por ejemplo: vivo o muerto, hombre o mujer,mayor de edad o no,...,etc.
   \end{itemize}
   
+  \section{Normalidad}
+  Si los datos no tienen una estructura normal, habitualmente se realiza una transformación  de la variable respuesta o utilizar métodos no paramétricos. Otra posible solución es utilizar modelos lineales generalizados. Estos nos permiten especificar otros tipos de distribución de errores.
+  \begin{itemize}
+  \item Poisson: muy útiles para conteo de acontecimientos, por ejemplo: número de heridos por accidentes de tráfico, número de hogares asegurados que dan parte de siniestro al día,..,etc.
+  \item Binomial: de gran utilidad para proporciones y datos de presencia o ausencia, por ejemplo: tasas de mortalidad, tasas de infección, porcentaje de siniestros mortales.
+  \item Gamma muy útiles con datos que muestran un coeficiente de variación constante, esto se da cuando la varianza aumenta conforme aumenta la media de la muestra, por ejemplo: número de heridos en función del número de siniestros.
+  \item
+  \end{itemize}
+  Además en los modelos lineales habituales, se asume que la variable dependiente así como también los errores del modelo siguen una distribución normal. Por ejemplo, supongamos que un investigador està interesado en predecir cuantos accidentes se producen al día en un lugar determinado, en este caso es razonable asumir que la variable dependiente seguirá una distribución de tipo Poisson y no una normal como algunas veces se utiliza por comodidad.
+<<tidy=TRUE,size="small",echo=FALSE>>=
+  x<-c(2,3,4)
+plot(x,x)
+  @
   \end{document}
